# fl_xgboost

./: .gitignore  CMakeLists.txt
data/: a9a  a9a.diagonalguest.head  a9a.diagonalhost.head  a9a.guest  a9a.guest.head  a9a.host  a9a.host.head  a9a.t.guest  a9a.t.host  a9a.test  a9a.train  a9a3.guest  a9a3.onehost  a9a3.twohost  a9a4.guest  a9a4.onehost  a9a4.threehost  a9a4.twohost  bin.guest  bin.host  csvDataTemplate.csv  csvMeta.json  mpcCompare.guest  mpcCompare.host  mpcThreePartyCompare.guest  mpcThreePartyCompare.host  mpcThreePartyCompare.middleman
data/homoData/: epsilon_5k_homo_guest_double_pos.csv  epsilon_5k_homo_host_double_pos.csv
data/pca/: pca_1000_100  pca_1000_100.guest  pca_1000_100.host
data/pir/libsvm/: a9a20.guest  a9a2000.host
data/sample_align/csv/guest/: _meta  guest.csv
data/sample_align/csv/host/: _meta  host.csv
data/sample_align/csv_with_header/: 100_guest_train.csv  csv_with_null.csv  duplicated_guest.csv  duplicated_host.csv  guest  host  noDuplicated_guest.csv  noDuplicated_host.csv
data/sample_align/csv_with_header/wideTable/guest/: 1.csv  2.csv  3.csv
data/sample_align/csv_with_header/wideTable/host/: 1.csv  2.csv
data/sample_align/libsvm/: a9a100.guest  a9a1000.guest  a9a100Duplicated.guest  guest  host
data/sample_align/tfr/: host.tfrecord
demo/data/: featmap.txt
dmlc-core/: CMakeLists.txt
dmlc-core/include/dmlc/: strtonum.h
dmlc-core/src/data/: libsvm_parser.h  row_block.h
fedxgb/: CMakeLists.txt  fedxgb.conf.guest  fedxgb.conf.host  fx_xgb.conf.in  tests.cc  xgb.conf
fedxgb/cmake/: GoogleTest.cmake  common.cmake
fedxgb/cmake/modules/: FindGRPC.cmake  FindGTest.cmake  FindPackageMessage.cmake  FindProtobuf.cmake  FindPulsar.cmake  FindTBB.cmake  Findhelib.cmake  Findpulsar.cmake
fedxgb/include/: opt_paillier.h  paillier.h  ssl_util.h  utils.h
fedxgb/include/comm/: XgbServiceRegistry.h
fedxgb/include/comm/grpc/: XgbClient.h  XgbServer.h  XgbServiceRegistry.h  common.h
fedxgb/include/comm/pulsar/: PulsarClient.hpp  XgbPulsarService.h
fedxgb/include/heu/: fl_heu.h  heu_api.h  heu_utils.h
fedxgb/include/xgboost/: federated_param.h
fedxgb/proto/: commmanager.proto  grpccomm.proto  hellostreamingworld.proto  helloworld.proto  xgbcomm.proto
fedxgb/src/: fed_cli_main.cc  opt_paillier.cc  paillier.cc  phe_bench_main.cc  ssl_util.cc  utils.cc
fedxgb/src/comm/: BaseComm.cpp  BaseComm.h  XgbServiceRegistry.cc
fedxgb/src/comm/grpc/: GRPCComm.hpp  XgbClient.cpp  XgbClient.h  XgbServer.cpp  XgbServer.h  XgbServiceAsyncClient.cpp  XgbServiceAsyncClient.h  XgbServiceAsyncServer.cpp  XgbServiceAsyncServer.h  XgbServiceClient.cpp  XgbServiceClient.h  XgbServiceRegistry.cc  XgbServiceServer.cpp  XgbServiceServer.h  common.cpp  common.h
fedxgb/src/comm/grpc/demo/: greeter_async_bidi_client.cc  greeter_async_bidi_server.cc  greeter_async_client.cc  greeter_client.cc  greeter_server.cc
fedxgb/src/comm/pulsar/: XgbPulsarService.cpp
fedxgb/src/grpc/: greeter_async_server.cc
fedxgb/src/heu/: fl_heu.cc  heu_api.cc
fedxgb/tests/: test_boost.cc  test_grpc.cc  test_heu.cc  test_homomorphic.cc  test_omp.cc  test_openssl.cc  test_pulsar.cc
fl-core/: CMakeLists.txt
fl-core/cmake/modules/: FindGRPC.cmake  FindProtobuf.cmake
fl-core/tests/: test_homomorphic.cc
include/fl/: opt_paillier.h  utils.h
include/xgboost/: base.h  data.h  gbm.h  learner.h  objective.h  predictor.h  tree_model.h  tree_updater.h
jvm-packages/: CMakeLists.txt  checkstyle.xml  create_jni.py  pom.xml  scalastyle-config.xml
jvm-packages/lib/linux/x86_64/boost/lib/: libboost_atomic-mt-x64.so.1.81.0  libboost_filesystem-mt-x64.so.1.81.0  libboost_thread-mt-x64.so.1.81.0
jvm-packages/lib/linux/x86_64/grpc/lib/: libaddress_sorting.so.31  libaddress_sorting.so.31.0.0  libgpr.so.31  libgpr.so.31.0.0  libgrpc++.so.1.54.0  libgrpc++_reflection.so.1.54.0  libupb.so.31
jvm-packages/lib/linux/x86_64/grpc/lib64/: libabsl_bad_any_cast_impl.so.2301.0.0  libabsl_bad_optional_access.so.2301.0.0  libabsl_base.so.2301.0.0  libabsl_city.so.2301.0.0  libabsl_cord_internal.so.2301.0.0  libabsl_cordz_functions.so.2301.0.0  libabsl_cordz_handle.so.2301.0.0  libabsl_cordz_info.so.2301.0.0  libabsl_cordz_sample_token.so.2301.0.0  libabsl_crc32c.so.2301.0.0  libabsl_crc_cord_state.so.2301.0.0  libabsl_crc_cpu_detect.so.2301.0.0  libabsl_crc_internal.so.2301.0.0  libabsl_demangle_internal.so.2301.0.0  libabsl_die_if_null.so.2301.0.0  libabsl_examine_stack.so.2301.0.0  libabsl_failure_signal_handler.so.2301.0.0  libabsl_flags_commandlineflag.so.2301.0.0  libabsl_flags_commandlineflag_internal.so.2301.0.0  libabsl_flags_internal.so.2301.0.0  libabsl_flags_marshalling.so.2301.0.0  libabsl_flags_parse.so.2301.0.0  libabsl_flags_program_name.so.2301.0.0  libabsl_flags_reflection.so.2301.0.0  libabsl_hash.so.2301.0.0  (+44 more)
jvm-packages/lib/linux/x86_64/lib/: libgomp.so.1.0.0  libtbbmalloc.so.2  libtbbmalloc_proxy.so.2
jvm-packages/lib/macos/aarch64/lib/: libtbb.12.8.dylib  libtbbmalloc.2.8.dylib  libtbbmalloc_proxy.2.8.dylib
jvm-packages/xgboost4j/: pom.xml
jvm-packages/xgboost4j-example/: pom.xml
jvm-packages/xgboost4j-federated-app/: pom.xml
src/: CMakeLists.txt  cli_main.cc  learner.cc
src/common/: hist_util.cc  hist_util.h  host_device_vector.cc  partition_builder.h
src/data/: data.cc
src/fl/: opt_paillier.cc  utils.cc
src/gbm/: gblinear.cc  gbtree.cc  gbtree.h
src/objective/: aft_obj.cu  hinge.cu  multiclass_obj.cu  rank_obj.cu  regression_obj.cu
src/predictor/: cpu_predictor.cc  predict_fn.h
src/tree/: common_row_partitioner.h  driver.h  param.h  tree_model.cc  updater_approx.cc  updater_colmaker.cc  updater_quantile_hist.cc  updater_quantile_hist.h  updater_refresh.cc
src/tree/hist/: evaluate_splits.h  expand_entry.h  histogram.h
tests/cli/: machine.conf.in
tests/demo/: CMakeLists.txt  test_homomorphic.cc
tests/demo/cmake/: FindGRPC.cmake  FindProtobuf.cmake
tests/demo/include/: opt_paillier.h  paillier.h  utils.h
tests/demo/src/: opt_paillier.cc  paillier.cc  utils.cc
tests/demo/tests/: test_homomorphic.cc  test_omp.cc
(+85 files in other folders)
